@@ -15,6 +15,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.doThrow;
+import static org.mockito.Mockito.when;
 
 import io.harness.CategoryTest;
 import io.harness.annotations.dev.HarnessTeam;
@@ -43,6 +44,7 @@ import io.harness.logging.LogCallback;
 import io.harness.pcf.CfCommandUnitConstants;
 import io.harness.pcf.CfDeploymentManager;
 import io.harness.pcf.PivotalClientApiException;
+import io.harness.pcf.model.CfCreateApplicationRequestData;
 import io.harness.pcf.model.CfRequestConfig;
 import io.harness.pcf.model.CloudFoundryConfig;
 import io.harness.rule.Owner;
@@ -50,12 +52,13 @@ import io.harness.security.encryption.EncryptedDataDetail;
 import io.harness.security.encryption.SecretDecryptionService;
 
 import java.io.File;
-import java.util.Arrays;
+import java.util.List;
 import org.cloudfoundry.operations.applications.ApplicationDetail;
 import org.cloudfoundry.operations.applications.ApplicationSummary;
 import org.junit.Test;
 import org.junit.experimental.categories.Category;
 import org.junit.runner.RunWith;
+import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Spy;
@@ -130,7 +133,7 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
     TasManifestsPackage tasManifestsPackage = TasManifestsPackage.builder()
                                                   .manifestYml(manifestsYaml)
                                                   .autoscalarManifestYml(autoscalarYaml)
-                                                  .variableYmls(Arrays.asList(variableYamls))
+                                                  .variableYmls(List.of(variableYamls))
                                                   .build();
 
     CfRollingRollbackRequestNG cfRollingRollbackRequestNG = CfRollingRollbackRequestNG.builder()
@@ -174,7 +177,6 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
 
     String name = "name";
     String id = "id";
-    String url = "url";
     ApplicationSummary applicationSummary = ApplicationSummary.builder()
                                                 .id(id)
                                                 .diskQuota(1)
@@ -184,7 +186,7 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
                                                 .requestedState(STOPPED)
                                                 .runningInstances(0)
                                                 .build();
-    doReturn(Arrays.asList(applicationSummary))
+    doReturn(List.of(applicationSummary))
         .when(cfDeploymentManager)
         .getPreviousReleasesForRolling(cfRequestConfig, cfRollingDeployRequestNG.getApplicationName());
 
@@ -210,7 +212,7 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
 
     doReturn(applicationDetail).when(cfDeploymentManager).createRollingApplicationWithSteadyStateCheck(any(), any());
 
-    CfCommandResponseNG cfCommandExecutionResponse = cfRollingDeployCommandTaskHandlerNG.executeTaskInternal(
+    cfRollingDeployCommandTaskHandlerNG.executeTaskInternal(
         cfRollingRollbackRequestNG, logStreamingTaskClient, commandUnitsProgress);
   }
 
@@ -267,7 +269,7 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
     TasManifestsPackage tasManifestsPackage = TasManifestsPackage.builder()
                                                   .manifestYml(manifestsYaml)
                                                   .autoscalarManifestYml(autoscalarYaml)
-                                                  .variableYmls(Arrays.asList(variableYamls))
+                                                  .variableYmls(List.of(variableYamls))
                                                   .build();
 
     CfRollingDeployRequestNG cfRollingDeployRequestNG = CfRollingDeployRequestNG.builder()
@@ -285,25 +287,8 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
         .when(pcfCommandTaskHelper)
         .getCfCliPathOnDelegate(true, cfRollingDeployRequestNG.getCfCliVersion());
 
-    CfRequestConfig cfRequestConfig =
-        CfRequestConfig.builder()
-            .userName(String.valueOf(cfConfig.getUserName()))
-            .endpointUrl(cfConfig.getEndpointUrl())
-            .password(String.valueOf(cfConfig.getPassword()))
-            .orgName(tasInfraConfig.getOrganization())
-            .spaceName(tasInfraConfig.getSpace())
-            .timeOutIntervalInMins(cfRollingDeployRequestNG.getTimeoutIntervalInMin())
-            .cfHomeDirPath(file.getAbsolutePath())
-            .cfCliPath(pcfCommandTaskHelper.getCfCliPathOnDelegate(true, cfRollingDeployRequestNG.getCfCliVersion()))
-            .cfCliVersion(cfRollingDeployRequestNG.getCfCliVersion())
-            .useCFCLI(true)
-            .applicationName(cfRollingDeployRequestNG.getApplicationName())
-            .desiredCount(cfRollingDeployRequestNG.getDesiredCount())
-            .build();
-
     String name = "name";
     String id = "id";
-    String url = "url";
     ApplicationSummary applicationSummary = ApplicationSummary.builder()
                                                 .id(id)
                                                 .diskQuota(1)
@@ -313,7 +298,7 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
                                                 .requestedState(STOPPED)
                                                 .runningInstances(0)
                                                 .build();
-    doReturn(Arrays.asList(applicationSummary)).when(cfDeploymentManager).getPreviousReleasesForRolling(any(), any());
+    doReturn(List.of(applicationSummary)).when(cfDeploymentManager).getPreviousReleasesForRolling(any(), any());
 
     int instances = 1;
     ApplicationDetail applicationDetail = ApplicationDetail.builder()
@@ -341,6 +326,18 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
         cfRollingDeployRequestNG, logStreamingTaskClient, commandUnitsProgress);
 
     assertThat(cfCommandExecutionResponse.getCommandExecutionStatus()).isEqualTo(CommandExecutionStatus.SUCCESS);
+
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesBefore().size())
+        .isEqualTo(1);
+    assertThat(
+        cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesBefore().get(0).getInstanceName())
+        .isEqualTo(id);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesAfter().size())
+        .isEqualTo(1);
+    assertThat(
+        cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesAfter().get(0).getInstanceName())
+        .isEqualTo(id);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getDeployedServiceInstances().size()).isZero();
   }
 
   @Test
@@ -401,7 +398,7 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
     TasManifestsPackage tasManifestsPackage = TasManifestsPackage.builder()
                                                   .manifestYml(manifestsYaml)
                                                   .autoscalarManifestYml(autoscalarYaml)
-                                                  .variableYmls(Arrays.asList(variableYamls))
+                                                  .variableYmls(List.of(variableYamls))
                                                   .build();
 
     CfRollingDeployRequestNG cfRollingDeployRequestNG = CfRollingDeployRequestNG.builder()
@@ -419,25 +416,8 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
         .when(pcfCommandTaskHelper)
         .getCfCliPathOnDelegate(true, cfRollingDeployRequestNG.getCfCliVersion());
 
-    CfRequestConfig cfRequestConfig =
-        CfRequestConfig.builder()
-            .userName(String.valueOf(cfConfig.getUserName()))
-            .endpointUrl(cfConfig.getEndpointUrl())
-            .password(String.valueOf(cfConfig.getPassword()))
-            .orgName(tasInfraConfig.getOrganization())
-            .spaceName(tasInfraConfig.getSpace())
-            .timeOutIntervalInMins(cfRollingDeployRequestNG.getTimeoutIntervalInMin())
-            .cfHomeDirPath(file.getAbsolutePath())
-            .cfCliPath(pcfCommandTaskHelper.getCfCliPathOnDelegate(true, cfRollingDeployRequestNG.getCfCliVersion()))
-            .cfCliVersion(cfRollingDeployRequestNG.getCfCliVersion())
-            .useCFCLI(true)
-            .applicationName(cfRollingDeployRequestNG.getApplicationName())
-            .desiredCount(cfRollingDeployRequestNG.getDesiredCount())
-            .build();
-
     String name = "name";
     String id = "id";
-    String url = "url";
     ApplicationSummary applicationSummary = ApplicationSummary.builder()
                                                 .id(id)
                                                 .diskQuota(1)
@@ -447,7 +427,7 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
                                                 .requestedState(STOPPED)
                                                 .runningInstances(0)
                                                 .build();
-    doReturn(Arrays.asList(applicationSummary)).when(cfDeploymentManager).getPreviousReleasesForRolling(any(), any());
+    doReturn(List.of(applicationSummary)).when(cfDeploymentManager).getPreviousReleasesForRolling(any(), any());
 
     int instances = 1;
     ApplicationDetail applicationDetail = ApplicationDetail.builder()
@@ -475,6 +455,18 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
         cfRollingDeployRequestNG, logStreamingTaskClient, commandUnitsProgress);
 
     assertThat(cfCommandExecutionResponse.getCommandExecutionStatus()).isEqualTo(CommandExecutionStatus.SUCCESS);
+
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesBefore().size())
+        .isEqualTo(1);
+    assertThat(
+        cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesBefore().get(0).getInstanceName())
+        .isEqualTo(id);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesAfter().size())
+        .isEqualTo(1);
+    assertThat(
+        cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesAfter().get(0).getInstanceName())
+        .isEqualTo(id);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getDeployedServiceInstances().size()).isZero();
   }
 
   @Test
@@ -530,7 +522,7 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
     TasManifestsPackage tasManifestsPackage = TasManifestsPackage.builder()
                                                   .manifestYml(manifestsYaml)
                                                   .autoscalarManifestYml(autoscalarYaml)
-                                                  .variableYmls(Arrays.asList(variableYamls))
+                                                  .variableYmls(List.of(variableYamls))
                                                   .build();
 
     CfRollingDeployRequestNG cfRollingDeployRequestNG = CfRollingDeployRequestNG.builder()
@@ -566,16 +558,6 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
 
     String name = "name";
     String id = "id";
-    String url = "url";
-    ApplicationSummary applicationSummary = ApplicationSummary.builder()
-                                                .id(id)
-                                                .diskQuota(1)
-                                                .instances(0)
-                                                .memoryLimit(1)
-                                                .name(name)
-                                                .requestedState(STOPPED)
-                                                .runningInstances(0)
-                                                .build();
     doThrow(PivotalClientApiException.class).when(cfDeploymentManager).getPreviousReleasesForRolling(any(), any());
 
     int instances = 1;
@@ -603,6 +585,9 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
     CfCommandResponseNG cfCommandExecutionResponse = cfRollingDeployCommandTaskHandlerNG.executeTaskInternal(
         cfRollingDeployRequestNG, logStreamingTaskClient, commandUnitsProgress);
 
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesBefore().size()).isZero();
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesAfter().size()).isZero();
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getDeployedServiceInstances().size()).isZero();
     assertThat(cfCommandExecutionResponse.getCommandExecutionStatus()).isEqualTo(CommandExecutionStatus.FAILURE);
   }
 
@@ -617,7 +602,8 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
     CommandUnitsProgress commandUnitsProgress = CommandUnitsProgress.builder().build();
 
     File file = new File("/gs");
-    doReturn(file).when(pcfCommandTaskBaseHelper).generateWorkingDirectoryForDeployment();
+    File file1 = new File("/trailing");
+    when(pcfCommandTaskBaseHelper.generateWorkingDirectoryForDeployment()).thenReturn(file).thenReturn(file1);
 
     doReturn(executionLogCallback)
         .when(tasTaskHelperBase)
@@ -632,11 +618,6 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
         .mapTasConfigWithDecryption(tasInfraConfig.getTasConnectorDTO(), tasInfraConfig.getEncryptionDataDetails());
 
     TasArtifactConfig tasArtifactConfig = TasPackageArtifactConfig.builder().build();
-    String variableYamls = "\n"
-        + "\n"
-        + "APP_MEMORY: 350M\n"
-        + "INSTANCES: 1\n"
-        + "APP_NAME: rolling_rollback_locallyyyyw_rediessre";
     String manifestsYaml = "applications:\n"
         + "- name: ((APP_NAME))\n"
         + "  instances: ((INSTANCES))\n"
@@ -695,16 +676,6 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
 
     String name = "name";
     String id = "id";
-    String url = "url";
-    ApplicationSummary applicationSummary = ApplicationSummary.builder()
-                                                .id(id)
-                                                .diskQuota(1)
-                                                .instances(0)
-                                                .memoryLimit(1)
-                                                .name(name)
-                                                .requestedState(STOPPED)
-                                                .runningInstances(0)
-                                                .build();
     doReturn(emptyList()).when(cfDeploymentManager).getPreviousReleasesForRolling(any(), any());
 
     int instances = 1;
@@ -727,11 +698,32 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
         TasArtifactDownloadResponse.builder().artifactFile(fileArtifact).build();
     doReturn(tasArtifactDownloadResponse).when(pcfCommandTaskHelper).downloadPackageArtifact(any(), any());
 
-    doReturn(applicationDetail).when(cfDeploymentManager).createRollingApplicationWithSteadyStateCheck(any(), any());
+    ArgumentCaptor<CfCreateApplicationRequestData> cfRequestConfigArgumentCaptor =
+        ArgumentCaptor.forClass(CfCreateApplicationRequestData.class);
+    doReturn(applicationDetail)
+        .when(cfDeploymentManager)
+        .createRollingApplicationWithSteadyStateCheck(cfRequestConfigArgumentCaptor.capture(), any());
 
     CfCommandResponseNG cfCommandExecutionResponse = cfRollingDeployCommandTaskHandlerNG.executeTaskInternal(
         cfRollingDeployRequestNG, logStreamingTaskClient, commandUnitsProgress);
+    CfRequestConfig cfRequestConfigCaptured = cfRequestConfigArgumentCaptor.getValue().getCfRequestConfig();
+    assertThat(cfRequestConfigCaptured.getCfHomeDirPath()).isEqualTo("/gs");
+    assertThat(cfRequestConfigCaptured.getTrailingLogsDirPath()).isEqualTo("/trailing");
+    assertThat(cfRequestConfigArgumentCaptor.getValue().getStrategy()).isNull();
 
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesBefore().size()).isZero();
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesAfter().size())
+        .isEqualTo(1);
+    assertThat(
+        cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesAfter().get(0).getInstanceName())
+        .isEqualTo(id);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getDeployedServiceInstances().size())
+        .isEqualTo(1);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo()
+                   .getDeployedServiceInstances()
+                   .get(0)
+                   .getInstanceName())
+        .isEqualTo(id);
     assertThat(cfCommandExecutionResponse.getCommandExecutionStatus()).isEqualTo(CommandExecutionStatus.SUCCESS);
   }
 
@@ -746,8 +738,8 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
     CommandUnitsProgress commandUnitsProgress = CommandUnitsProgress.builder().build();
 
     File file = new File("/gs");
-    doReturn(file).when(pcfCommandTaskBaseHelper).generateWorkingDirectoryForDeployment();
-
+    File file1 = new File("/trailing");
+    when(pcfCommandTaskBaseHelper.generateWorkingDirectoryForDeployment()).thenReturn(file).thenReturn(file1);
     doReturn(executionLogCallback)
         .when(tasTaskHelperBase)
         .getLogCallback(logStreamingTaskClient, CfCommandUnitConstants.Deploy, true, commandUnitsProgress);
@@ -761,11 +753,6 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
         .mapTasConfigWithDecryption(tasInfraConfig.getTasConnectorDTO(), tasInfraConfig.getEncryptionDataDetails());
 
     TasArtifactConfig tasArtifactConfig = TasPackageArtifactConfig.builder().build();
-    String variableYamls = "\n"
-        + "\n"
-        + "APP_MEMORY: 350M\n"
-        + "INSTANCES: 1\n"
-        + "APP_NAME: rolling_rollback_locallyyyyw_rediessre";
     String manifestsYaml = "applications:\n"
         + "- name: ((APP_NAME))\n"
         + "  instances: ((INSTANCES))\n"
@@ -806,25 +793,8 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
         .when(pcfCommandTaskHelper)
         .getCfCliPathOnDelegate(true, cfRollingDeployRequestNG.getCfCliVersion());
 
-    CfRequestConfig cfRequestConfig =
-        CfRequestConfig.builder()
-            .userName(String.valueOf(cfConfig.getUserName()))
-            .endpointUrl(cfConfig.getEndpointUrl())
-            .password(String.valueOf(cfConfig.getPassword()))
-            .orgName(tasInfraConfig.getOrganization())
-            .spaceName(tasInfraConfig.getSpace())
-            .timeOutIntervalInMins(cfRollingDeployRequestNG.getTimeoutIntervalInMin())
-            .cfHomeDirPath(file.getAbsolutePath())
-            .cfCliPath(pcfCommandTaskHelper.getCfCliPathOnDelegate(true, cfRollingDeployRequestNG.getCfCliVersion()))
-            .cfCliVersion(cfRollingDeployRequestNG.getCfCliVersion())
-            .useCFCLI(true)
-            .applicationName(cfRollingDeployRequestNG.getApplicationName())
-            .desiredCount(cfRollingDeployRequestNG.getDesiredCount())
-            .build();
-
     String name = "name";
     String id = "id";
-    String url = "url";
     ApplicationSummary applicationSummary = ApplicationSummary.builder()
                                                 .id(id)
                                                 .diskQuota(1)
@@ -834,7 +804,7 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
                                                 .requestedState(STOPPED)
                                                 .runningInstances(0)
                                                 .build();
-    doReturn(Arrays.asList(applicationSummary)).when(cfDeploymentManager).getPreviousReleasesForRolling(any(), any());
+    doReturn(List.of(applicationSummary)).when(cfDeploymentManager).getPreviousReleasesForRolling(any(), any());
 
     int instances = 1;
     ApplicationDetail applicationDetail = ApplicationDetail.builder()
@@ -856,12 +826,29 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
         TasArtifactDownloadResponse.builder().artifactFile(fileArtifact).build();
     doReturn(tasArtifactDownloadResponse).when(pcfCommandTaskHelper).downloadPackageArtifact(any(), any());
 
-    doReturn(applicationDetail).when(cfDeploymentManager).createRollingApplicationWithSteadyStateCheck(any(), any());
-
+    ArgumentCaptor<CfCreateApplicationRequestData> cfRequestConfigArgumentCaptor =
+        ArgumentCaptor.forClass(CfCreateApplicationRequestData.class);
+    doReturn(applicationDetail)
+        .when(cfDeploymentManager)
+        .createRollingApplicationWithSteadyStateCheck(cfRequestConfigArgumentCaptor.capture(), any());
     CfCommandResponseNG cfCommandExecutionResponse = cfRollingDeployCommandTaskHandlerNG.executeTaskInternal(
         cfRollingDeployRequestNG, logStreamingTaskClient, commandUnitsProgress);
-
+    CfRequestConfig cfRequestConfigCaptured = cfRequestConfigArgumentCaptor.getValue().getCfRequestConfig();
+    assertThat(cfRequestConfigCaptured.getCfHomeDirPath()).isEqualTo("/gs");
+    assertThat(cfRequestConfigCaptured.getTrailingLogsDirPath()).isEqualTo("/trailing");
+    assertThat(cfRequestConfigArgumentCaptor.getValue().getStrategy()).isEqualTo("rolling");
     assertThat(cfCommandExecutionResponse.getCommandExecutionStatus()).isEqualTo(CommandExecutionStatus.SUCCESS);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesBefore().size())
+        .isEqualTo(1);
+    assertThat(
+        cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesBefore().get(0).getInstanceName())
+        .isEqualTo(id);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesAfter().size())
+        .isEqualTo(1);
+    assertThat(
+        cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesAfter().get(0).getInstanceName())
+        .isEqualTo(id);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getDeployedServiceInstances().size()).isZero();
   }
 
   @Test
@@ -891,11 +878,6 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
         .mapTasConfigWithDecryption(tasInfraConfig.getTasConnectorDTO(), tasInfraConfig.getEncryptionDataDetails());
 
     TasArtifactConfig tasArtifactConfig = TasPackageArtifactConfig.builder().build();
-    String variableYamls = "\n"
-        + "\n"
-        + "APP_MEMORY: 350M\n"
-        + "INSTANCES: 1\n"
-        + "APP_NAME: rolling_rollback_locallyyyyw_rediessre";
     String manifestsYaml = "applications:\n"
         + "- name: ((APP_NAME))\n"
         + "  instances: ((INSTANCES))\n"
@@ -936,25 +918,8 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
         .when(pcfCommandTaskHelper)
         .getCfCliPathOnDelegate(true, cfRollingDeployRequestNG.getCfCliVersion());
 
-    CfRequestConfig cfRequestConfig =
-        CfRequestConfig.builder()
-            .userName(String.valueOf(cfConfig.getUserName()))
-            .endpointUrl(cfConfig.getEndpointUrl())
-            .password(String.valueOf(cfConfig.getPassword()))
-            .orgName(tasInfraConfig.getOrganization())
-            .spaceName(tasInfraConfig.getSpace())
-            .timeOutIntervalInMins(cfRollingDeployRequestNG.getTimeoutIntervalInMin())
-            .cfHomeDirPath(file.getAbsolutePath())
-            .cfCliPath(pcfCommandTaskHelper.getCfCliPathOnDelegate(true, cfRollingDeployRequestNG.getCfCliVersion()))
-            .cfCliVersion(cfRollingDeployRequestNG.getCfCliVersion())
-            .useCFCLI(true)
-            .applicationName(cfRollingDeployRequestNG.getApplicationName())
-            .desiredCount(cfRollingDeployRequestNG.getDesiredCount())
-            .build();
-
     String name = "name";
     String id = "id";
-    String url = "url";
     ApplicationSummary applicationSummary = ApplicationSummary.builder()
                                                 .id(id)
                                                 .diskQuota(1)
@@ -964,7 +929,7 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
                                                 .requestedState(STOPPED)
                                                 .runningInstances(0)
                                                 .build();
-    doReturn(Arrays.asList(applicationSummary)).when(cfDeploymentManager).getPreviousReleasesForRolling(any(), any());
+    doReturn(List.of(applicationSummary)).when(cfDeploymentManager).getPreviousReleasesForRolling(any(), any());
 
     int instances = 1;
     ApplicationDetail applicationDetail = ApplicationDetail.builder()
@@ -992,6 +957,17 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
         cfRollingDeployRequestNG, logStreamingTaskClient, commandUnitsProgress);
 
     assertThat(cfCommandExecutionResponse.getCommandExecutionStatus()).isEqualTo(CommandExecutionStatus.SUCCESS);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesBefore().size())
+        .isEqualTo(1);
+    assertThat(
+        cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesBefore().get(0).getInstanceName())
+        .isEqualTo(id);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesAfter().size())
+        .isEqualTo(1);
+    assertThat(
+        cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesAfter().get(0).getInstanceName())
+        .isEqualTo(id);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getDeployedServiceInstances().size()).isZero();
   }
 
   @Test
@@ -1020,11 +996,6 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
         .mapTasConfigWithDecryption(tasInfraConfig.getTasConnectorDTO(), tasInfraConfig.getEncryptionDataDetails());
 
     TasArtifactConfig tasArtifactConfig = TasPackageArtifactConfig.builder().build();
-    String variableYamls = "\n"
-        + "\n"
-        + "APP_MEMORY: 350M\n"
-        + "INSTANCES: 1\n"
-        + "APP_NAME: rolling_rollback_locallyyyyw_rediessre";
     String manifestsYaml = "applications:\n"
         + "- name: ((APP_NAME))\n"
         + "  instances: ((INSTANCES))\n"
@@ -1066,25 +1037,8 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
         .when(pcfCommandTaskHelper)
         .getCfCliPathOnDelegate(true, cfRollingDeployRequestNG.getCfCliVersion());
 
-    CfRequestConfig cfRequestConfig =
-        CfRequestConfig.builder()
-            .userName(String.valueOf(cfConfig.getUserName()))
-            .endpointUrl(cfConfig.getEndpointUrl())
-            .password(String.valueOf(cfConfig.getPassword()))
-            .orgName(tasInfraConfig.getOrganization())
-            .spaceName(tasInfraConfig.getSpace())
-            .timeOutIntervalInMins(cfRollingDeployRequestNG.getTimeoutIntervalInMin())
-            .cfHomeDirPath(file.getAbsolutePath())
-            .cfCliPath(pcfCommandTaskHelper.getCfCliPathOnDelegate(true, cfRollingDeployRequestNG.getCfCliVersion()))
-            .cfCliVersion(cfRollingDeployRequestNG.getCfCliVersion())
-            .useCFCLI(true)
-            .applicationName(cfRollingDeployRequestNG.getApplicationName())
-            .desiredCount(cfRollingDeployRequestNG.getDesiredCount())
-            .build();
-
     String name = "name";
     String id = "id";
-    String url = "url";
     ApplicationSummary applicationSummary = ApplicationSummary.builder()
                                                 .id(id)
                                                 .diskQuota(1)
@@ -1094,7 +1048,7 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
                                                 .requestedState(STOPPED)
                                                 .runningInstances(0)
                                                 .build();
-    doReturn(Arrays.asList(applicationSummary)).when(cfDeploymentManager).getPreviousReleasesForRolling(any(), any());
+    doReturn(List.of(applicationSummary)).when(cfDeploymentManager).getPreviousReleasesForRolling(any(), any());
 
     int instances = 1;
     ApplicationDetail applicationDetail = ApplicationDetail.builder()
@@ -1122,5 +1076,16 @@ public class CfRollingDeployCommandTaskHandlerTest extends CategoryTest {
         cfRollingDeployRequestNG, logStreamingTaskClient, commandUnitsProgress);
 
     assertThat(cfCommandExecutionResponse.getCommandExecutionStatus()).isEqualTo(CommandExecutionStatus.SUCCESS);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesBefore().size())
+        .isEqualTo(1);
+    assertThat(
+        cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesBefore().get(0).getInstanceName())
+        .isEqualTo(id);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesAfter().size())
+        .isEqualTo(1);
+    assertThat(
+        cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesAfter().get(0).getInstanceName())
+        .isEqualTo(id);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getDeployedServiceInstances().size()).isZero();
   }
 }
