@@ -8,13 +8,19 @@
 package io.harness.delegate.pcf;
 
 import static io.harness.delegate.cf.CfTestConstants.STOPPED;
+import static io.harness.pcf.CfCommandUnitConstants.Rollback;
+import static io.harness.rule.OwnerRule.ANIL;
 import static io.harness.rule.OwnerRule.PIYUSH_BHUWALKA;
 
 import static java.util.Collections.emptyList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.doThrow;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
 
 import io.harness.CategoryTest;
 import io.harness.annotations.dev.HarnessTeam;
@@ -43,19 +49,19 @@ import io.harness.logging.LogCallback;
 import io.harness.pcf.CfCommandUnitConstants;
 import io.harness.pcf.CfDeploymentManager;
 import io.harness.pcf.PivotalClientApiException;
-import io.harness.pcf.model.CfRequestConfig;
 import io.harness.pcf.model.CloudFoundryConfig;
 import io.harness.rule.Owner;
 import io.harness.security.encryption.EncryptedDataDetail;
 import io.harness.security.encryption.SecretDecryptionService;
 
 import java.io.File;
-import java.util.Arrays;
+import java.util.List;
 import org.cloudfoundry.operations.applications.ApplicationDetail;
 import org.cloudfoundry.operations.applications.ApplicationSummary;
 import org.junit.Test;
 import org.junit.experimental.categories.Category;
 import org.junit.runner.RunWith;
+import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Spy;
@@ -130,7 +136,7 @@ public class CfRollingRollbackCommandTaskHandlerTest extends CategoryTest {
     TasManifestsPackage tasManifestsPackage = TasManifestsPackage.builder()
                                                   .manifestYml(manifestsYaml)
                                                   .autoscalarManifestYml(autoscalarYaml)
-                                                  .variableYmls(Arrays.asList(variableYamls))
+                                                  .variableYmls(List.of(variableYamls))
                                                   .build();
 
     CfRollingDeployRequestNG cfRollingDeployRequestNG = CfRollingDeployRequestNG.builder()
@@ -156,25 +162,8 @@ public class CfRollingRollbackCommandTaskHandlerTest extends CategoryTest {
         .when(pcfCommandTaskHelper)
         .getCfCliPathOnDelegate(true, cfRollingRollbackRequestNG.getCfCliVersion());
 
-    CfRequestConfig cfRequestConfig =
-        CfRequestConfig.builder()
-            .userName(String.valueOf(cfConfig.getUserName()))
-            .endpointUrl(cfConfig.getEndpointUrl())
-            .password(String.valueOf(cfConfig.getPassword()))
-            .orgName(tasInfraConfig.getOrganization())
-            .spaceName(tasInfraConfig.getSpace())
-            .timeOutIntervalInMins(cfRollingRollbackRequestNG.getTimeoutIntervalInMin())
-            .cfHomeDirPath(file.getAbsolutePath())
-            .cfCliPath(pcfCommandTaskHelper.getCfCliPathOnDelegate(true, cfRollingRollbackRequestNG.getCfCliVersion()))
-            .cfCliVersion(cfRollingRollbackRequestNG.getCfCliVersion())
-            .useCFCLI(true)
-            .applicationName(cfRollingRollbackRequestNG.getApplicationName())
-            .desiredCount(cfRollingRollbackRequestNG.getDesiredCount())
-            .build();
-
     String name = "name";
     String id = "id";
-    String url = "url";
     ApplicationSummary applicationSummary = ApplicationSummary.builder()
                                                 .id(id)
                                                 .diskQuota(1)
@@ -184,7 +173,7 @@ public class CfRollingRollbackCommandTaskHandlerTest extends CategoryTest {
                                                 .requestedState(STOPPED)
                                                 .runningInstances(0)
                                                 .build();
-    doReturn(Arrays.asList(applicationSummary)).when(cfDeploymentManager).getPreviousReleasesForRolling(any(), any());
+    doReturn(List.of(applicationSummary)).when(cfDeploymentManager).getPreviousReleasesForRolling(any(), any());
 
     int instances = 1;
     ApplicationDetail applicationDetail = ApplicationDetail.builder()
@@ -210,6 +199,23 @@ public class CfRollingRollbackCommandTaskHandlerTest extends CategoryTest {
 
     CfCommandResponseNG cfCommandExecutionResponse = cfRollingRollbackCommandTaskHandlerNG.executeTaskInternal(
         cfRollingDeployRequestNG, logStreamingTaskClient, commandUnitsProgress);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesBefore().size())
+        .isEqualTo(1);
+    assertThat(
+        cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesBefore().get(0).getInstanceName())
+        .isEqualTo(id);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesAfter().size())
+        .isEqualTo(1);
+    assertThat(
+        cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesAfter().get(0).getInstanceName())
+        .isEqualTo(id);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getDeployedServiceInstances().size())
+        .isEqualTo(1);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo()
+                   .getDeployedServiceInstances()
+                   .get(0)
+                   .getInstanceName())
+        .isEqualTo(id);
   }
 
   @Test
@@ -265,7 +271,7 @@ public class CfRollingRollbackCommandTaskHandlerTest extends CategoryTest {
     TasManifestsPackage tasManifestsPackage = TasManifestsPackage.builder()
                                                   .manifestYml(manifestsYaml)
                                                   .autoscalarManifestYml(autoscalarYaml)
-                                                  .variableYmls(Arrays.asList(variableYamls))
+                                                  .variableYmls(List.of(variableYamls))
                                                   .build();
 
     CfRollingRollbackRequestNG cfRollingRollbackRequestNG = CfRollingRollbackRequestNG.builder()
@@ -273,6 +279,7 @@ public class CfRollingRollbackCommandTaskHandlerTest extends CategoryTest {
                                                                 .tasArtifactConfig(tasArtifactConfig)
                                                                 .tasManifestsPackage(tasManifestsPackage)
                                                                 .timeoutIntervalInMin(5)
+                                                                .isFirstDeployment(false)
                                                                 .routeMaps(emptyList())
                                                                 .build();
 
@@ -283,25 +290,8 @@ public class CfRollingRollbackCommandTaskHandlerTest extends CategoryTest {
         .when(pcfCommandTaskHelper)
         .getCfCliPathOnDelegate(true, cfRollingRollbackRequestNG.getCfCliVersion());
 
-    CfRequestConfig cfRequestConfig =
-        CfRequestConfig.builder()
-            .userName(String.valueOf(cfConfig.getUserName()))
-            .endpointUrl(cfConfig.getEndpointUrl())
-            .password(String.valueOf(cfConfig.getPassword()))
-            .orgName(tasInfraConfig.getOrganization())
-            .spaceName(tasInfraConfig.getSpace())
-            .timeOutIntervalInMins(cfRollingRollbackRequestNG.getTimeoutIntervalInMin())
-            .cfHomeDirPath(file.getAbsolutePath())
-            .cfCliPath(pcfCommandTaskHelper.getCfCliPathOnDelegate(true, cfRollingRollbackRequestNG.getCfCliVersion()))
-            .cfCliVersion(cfRollingRollbackRequestNG.getCfCliVersion())
-            .useCFCLI(true)
-            .applicationName(cfRollingRollbackRequestNG.getApplicationName())
-            .desiredCount(cfRollingRollbackRequestNG.getDesiredCount())
-            .build();
-
     String name = "name";
     String id = "id";
-    String url = "url";
     ApplicationSummary applicationSummary = ApplicationSummary.builder()
                                                 .id(id)
                                                 .diskQuota(1)
@@ -311,7 +301,7 @@ public class CfRollingRollbackCommandTaskHandlerTest extends CategoryTest {
                                                 .requestedState(STOPPED)
                                                 .runningInstances(0)
                                                 .build();
-    doReturn(Arrays.asList(applicationSummary)).when(cfDeploymentManager).getPreviousReleasesForRolling(any(), any());
+    doReturn(List.of(applicationSummary)).when(cfDeploymentManager).getPreviousReleasesForRolling(any(), any());
 
     int instances = 1;
     ApplicationDetail applicationDetail = ApplicationDetail.builder()
@@ -339,6 +329,18 @@ public class CfRollingRollbackCommandTaskHandlerTest extends CategoryTest {
         cfRollingRollbackRequestNG, logStreamingTaskClient, commandUnitsProgress);
 
     assertThat(cfCommandExecutionResponse.getCommandExecutionStatus()).isEqualTo(CommandExecutionStatus.SUCCESS);
+    verify(cfDeploymentManager, times(1)).createRollingApplicationWithSteadyStateCheck(any(), any());
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesBefore().size())
+        .isEqualTo(1);
+    assertThat(
+        cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesBefore().get(0).getInstanceName())
+        .isEqualTo(id);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesAfter().size())
+        .isEqualTo(1);
+    assertThat(
+        cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesAfter().get(0).getInstanceName())
+        .isEqualTo(id);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getDeployedServiceInstances().size()).isZero();
   }
 
   @Test
@@ -399,7 +401,7 @@ public class CfRollingRollbackCommandTaskHandlerTest extends CategoryTest {
     TasManifestsPackage tasManifestsPackage = TasManifestsPackage.builder()
                                                   .manifestYml(manifestsYaml)
                                                   .autoscalarManifestYml(autoscalarYaml)
-                                                  .variableYmls(Arrays.asList(variableYamls))
+                                                  .variableYmls(List.of(variableYamls))
                                                   .build();
 
     CfRollingRollbackRequestNG cfRollingRollbackRequestNG = CfRollingRollbackRequestNG.builder()
@@ -417,25 +419,8 @@ public class CfRollingRollbackCommandTaskHandlerTest extends CategoryTest {
         .when(pcfCommandTaskHelper)
         .getCfCliPathOnDelegate(true, cfRollingRollbackRequestNG.getCfCliVersion());
 
-    CfRequestConfig cfRequestConfig =
-        CfRequestConfig.builder()
-            .userName(String.valueOf(cfConfig.getUserName()))
-            .endpointUrl(cfConfig.getEndpointUrl())
-            .password(String.valueOf(cfConfig.getPassword()))
-            .orgName(tasInfraConfig.getOrganization())
-            .spaceName(tasInfraConfig.getSpace())
-            .timeOutIntervalInMins(cfRollingRollbackRequestNG.getTimeoutIntervalInMin())
-            .cfHomeDirPath(file.getAbsolutePath())
-            .cfCliPath(pcfCommandTaskHelper.getCfCliPathOnDelegate(true, cfRollingRollbackRequestNG.getCfCliVersion()))
-            .cfCliVersion(cfRollingRollbackRequestNG.getCfCliVersion())
-            .useCFCLI(true)
-            .applicationName(cfRollingRollbackRequestNG.getApplicationName())
-            .desiredCount(cfRollingRollbackRequestNG.getDesiredCount())
-            .build();
-
     String name = "name";
     String id = "id";
-    String url = "url";
     ApplicationSummary applicationSummary = ApplicationSummary.builder()
                                                 .id(id)
                                                 .diskQuota(1)
@@ -445,7 +430,7 @@ public class CfRollingRollbackCommandTaskHandlerTest extends CategoryTest {
                                                 .requestedState(STOPPED)
                                                 .runningInstances(0)
                                                 .build();
-    doReturn(Arrays.asList(applicationSummary)).when(cfDeploymentManager).getPreviousReleasesForRolling(any(), any());
+    doReturn(List.of(applicationSummary)).when(cfDeploymentManager).getPreviousReleasesForRolling(any(), any());
 
     int instances = 1;
     ApplicationDetail applicationDetail = ApplicationDetail.builder()
@@ -473,6 +458,17 @@ public class CfRollingRollbackCommandTaskHandlerTest extends CategoryTest {
         cfRollingRollbackRequestNG, logStreamingTaskClient, commandUnitsProgress);
 
     assertThat(cfCommandExecutionResponse.getCommandExecutionStatus()).isEqualTo(CommandExecutionStatus.SUCCESS);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesBefore().size())
+        .isEqualTo(1);
+    assertThat(
+        cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesBefore().get(0).getInstanceName())
+        .isEqualTo(id);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesAfter().size())
+        .isEqualTo(1);
+    assertThat(
+        cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesAfter().get(0).getInstanceName())
+        .isEqualTo(id);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getDeployedServiceInstances().size()).isZero();
   }
 
   @Test
@@ -528,7 +524,7 @@ public class CfRollingRollbackCommandTaskHandlerTest extends CategoryTest {
     TasManifestsPackage tasManifestsPackage = TasManifestsPackage.builder()
                                                   .manifestYml(manifestsYaml)
                                                   .autoscalarManifestYml(autoscalarYaml)
-                                                  .variableYmls(Arrays.asList(variableYamls))
+                                                  .variableYmls(List.of(variableYamls))
                                                   .build();
 
     CfRollingRollbackRequestNG cfRollingRollbackRequestNG = CfRollingRollbackRequestNG.builder()
@@ -546,34 +542,8 @@ public class CfRollingRollbackCommandTaskHandlerTest extends CategoryTest {
         .when(pcfCommandTaskHelper)
         .getCfCliPathOnDelegate(true, cfRollingRollbackRequestNG.getCfCliVersion());
 
-    CfRequestConfig cfRequestConfig =
-        CfRequestConfig.builder()
-            .userName(String.valueOf(cfConfig.getUserName()))
-            .endpointUrl(cfConfig.getEndpointUrl())
-            .password(String.valueOf(cfConfig.getPassword()))
-            .orgName(tasInfraConfig.getOrganization())
-            .spaceName(tasInfraConfig.getSpace())
-            .timeOutIntervalInMins(cfRollingRollbackRequestNG.getTimeoutIntervalInMin())
-            .cfHomeDirPath(file.getAbsolutePath())
-            .cfCliPath(pcfCommandTaskHelper.getCfCliPathOnDelegate(true, cfRollingRollbackRequestNG.getCfCliVersion()))
-            .cfCliVersion(cfRollingRollbackRequestNG.getCfCliVersion())
-            .useCFCLI(true)
-            .applicationName(cfRollingRollbackRequestNG.getApplicationName())
-            .desiredCount(cfRollingRollbackRequestNG.getDesiredCount())
-            .build();
-
     String name = "name";
     String id = "id";
-    String url = "url";
-    ApplicationSummary applicationSummary = ApplicationSummary.builder()
-                                                .id(id)
-                                                .diskQuota(1)
-                                                .instances(0)
-                                                .memoryLimit(1)
-                                                .name(name)
-                                                .requestedState(STOPPED)
-                                                .runningInstances(0)
-                                                .build();
     doThrow(PivotalClientApiException.class).when(cfDeploymentManager).getPreviousReleasesForRolling(any(), any());
 
     int instances = 1;
@@ -602,6 +572,9 @@ public class CfRollingRollbackCommandTaskHandlerTest extends CategoryTest {
         cfRollingRollbackRequestNG, logStreamingTaskClient, commandUnitsProgress);
 
     assertThat(cfCommandExecutionResponse.getCommandExecutionStatus()).isEqualTo(CommandExecutionStatus.FAILURE);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesBefore().size()).isZero();
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesAfter().size()).isZero();
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getDeployedServiceInstances().size()).isZero();
   }
 
   @Test
@@ -630,11 +603,6 @@ public class CfRollingRollbackCommandTaskHandlerTest extends CategoryTest {
         .mapTasConfigWithDecryption(tasInfraConfig.getTasConnectorDTO(), tasInfraConfig.getEncryptionDataDetails());
 
     TasArtifactConfig tasArtifactConfig = TasPackageArtifactConfig.builder().build();
-    String variableYamls = "\n"
-        + "\n"
-        + "APP_MEMORY: 350M\n"
-        + "INSTANCES: 1\n"
-        + "APP_NAME: rolling_rollback_locallyyyyw_rediessre";
     String manifestsYaml = "applications:\n"
         + "- name: ((APP_NAME))\n"
         + "  instances: ((INSTANCES))\n"
@@ -675,34 +643,8 @@ public class CfRollingRollbackCommandTaskHandlerTest extends CategoryTest {
         .when(pcfCommandTaskHelper)
         .getCfCliPathOnDelegate(true, cfRollingRollbackRequestNG.getCfCliVersion());
 
-    CfRequestConfig cfRequestConfig =
-        CfRequestConfig.builder()
-            .userName(String.valueOf(cfConfig.getUserName()))
-            .endpointUrl(cfConfig.getEndpointUrl())
-            .password(String.valueOf(cfConfig.getPassword()))
-            .orgName(tasInfraConfig.getOrganization())
-            .spaceName(tasInfraConfig.getSpace())
-            .timeOutIntervalInMins(cfRollingRollbackRequestNG.getTimeoutIntervalInMin())
-            .cfHomeDirPath(file.getAbsolutePath())
-            .cfCliPath(pcfCommandTaskHelper.getCfCliPathOnDelegate(true, cfRollingRollbackRequestNG.getCfCliVersion()))
-            .cfCliVersion(cfRollingRollbackRequestNG.getCfCliVersion())
-            .useCFCLI(true)
-            .applicationName(cfRollingRollbackRequestNG.getApplicationName())
-            .desiredCount(cfRollingRollbackRequestNG.getDesiredCount())
-            .build();
-
     String name = "name";
     String id = "id";
-    String url = "url";
-    ApplicationSummary applicationSummary = ApplicationSummary.builder()
-                                                .id(id)
-                                                .diskQuota(1)
-                                                .instances(0)
-                                                .memoryLimit(1)
-                                                .name(name)
-                                                .requestedState(STOPPED)
-                                                .runningInstances(0)
-                                                .build();
     doReturn(emptyList()).when(cfDeploymentManager).getPreviousReleasesForRolling(any(), any());
 
     int instances = 1;
@@ -731,6 +673,19 @@ public class CfRollingRollbackCommandTaskHandlerTest extends CategoryTest {
         cfRollingRollbackRequestNG, logStreamingTaskClient, commandUnitsProgress);
 
     assertThat(cfCommandExecutionResponse.getCommandExecutionStatus()).isEqualTo(CommandExecutionStatus.SUCCESS);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesBefore().size()).isZero();
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesAfter().size())
+        .isEqualTo(1);
+    assertThat(
+        cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesAfter().get(0).getInstanceName())
+        .isEqualTo(id);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getDeployedServiceInstances().size())
+        .isEqualTo(1);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo()
+                   .getDeployedServiceInstances()
+                   .get(0)
+                   .getInstanceName())
+        .isEqualTo(id);
   }
 
   @Test
@@ -759,11 +714,6 @@ public class CfRollingRollbackCommandTaskHandlerTest extends CategoryTest {
         .mapTasConfigWithDecryption(tasInfraConfig.getTasConnectorDTO(), tasInfraConfig.getEncryptionDataDetails());
 
     TasArtifactConfig tasArtifactConfig = TasPackageArtifactConfig.builder().build();
-    String variableYamls = "\n"
-        + "\n"
-        + "APP_MEMORY: 350M\n"
-        + "INSTANCES: 1\n"
-        + "APP_NAME: rolling_rollback_locallyyyyw_rediessre";
     String manifestsYaml = "applications:\n"
         + "- name: ((APP_NAME))\n"
         + "  instances: ((INSTANCES))\n"
@@ -804,25 +754,8 @@ public class CfRollingRollbackCommandTaskHandlerTest extends CategoryTest {
         .when(pcfCommandTaskHelper)
         .getCfCliPathOnDelegate(true, cfRollingRollbackRequestNG.getCfCliVersion());
 
-    CfRequestConfig cfRequestConfig =
-        CfRequestConfig.builder()
-            .userName(String.valueOf(cfConfig.getUserName()))
-            .endpointUrl(cfConfig.getEndpointUrl())
-            .password(String.valueOf(cfConfig.getPassword()))
-            .orgName(tasInfraConfig.getOrganization())
-            .spaceName(tasInfraConfig.getSpace())
-            .timeOutIntervalInMins(cfRollingRollbackRequestNG.getTimeoutIntervalInMin())
-            .cfHomeDirPath(file.getAbsolutePath())
-            .cfCliPath(pcfCommandTaskHelper.getCfCliPathOnDelegate(true, cfRollingRollbackRequestNG.getCfCliVersion()))
-            .cfCliVersion(cfRollingRollbackRequestNG.getCfCliVersion())
-            .useCFCLI(true)
-            .applicationName(cfRollingRollbackRequestNG.getApplicationName())
-            .desiredCount(cfRollingRollbackRequestNG.getDesiredCount())
-            .build();
-
     String name = "name";
     String id = "id";
-    String url = "url";
     ApplicationSummary applicationSummary = ApplicationSummary.builder()
                                                 .id(id)
                                                 .diskQuota(1)
@@ -832,7 +765,7 @@ public class CfRollingRollbackCommandTaskHandlerTest extends CategoryTest {
                                                 .requestedState(STOPPED)
                                                 .runningInstances(0)
                                                 .build();
-    doReturn(Arrays.asList(applicationSummary)).when(cfDeploymentManager).getPreviousReleasesForRolling(any(), any());
+    doReturn(List.of(applicationSummary)).when(cfDeploymentManager).getPreviousReleasesForRolling(any(), any());
 
     int instances = 1;
     ApplicationDetail applicationDetail = ApplicationDetail.builder()
@@ -860,6 +793,17 @@ public class CfRollingRollbackCommandTaskHandlerTest extends CategoryTest {
         cfRollingRollbackRequestNG, logStreamingTaskClient, commandUnitsProgress);
 
     assertThat(cfCommandExecutionResponse.getCommandExecutionStatus()).isEqualTo(CommandExecutionStatus.SUCCESS);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesBefore().size())
+        .isEqualTo(1);
+    assertThat(
+        cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesBefore().get(0).getInstanceName())
+        .isEqualTo(id);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesAfter().size())
+        .isEqualTo(1);
+    assertThat(
+        cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesAfter().get(0).getInstanceName())
+        .isEqualTo(id);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getDeployedServiceInstances().size()).isZero();
   }
 
   @Test
@@ -889,11 +833,6 @@ public class CfRollingRollbackCommandTaskHandlerTest extends CategoryTest {
         .mapTasConfigWithDecryption(tasInfraConfig.getTasConnectorDTO(), tasInfraConfig.getEncryptionDataDetails());
 
     TasArtifactConfig tasArtifactConfig = TasPackageArtifactConfig.builder().build();
-    String variableYamls = "\n"
-        + "\n"
-        + "APP_MEMORY: 350M\n"
-        + "INSTANCES: 1\n"
-        + "APP_NAME: rolling_rollback_locallyyyyw_rediessre";
     String manifestsYaml = "applications:\n"
         + "- name: ((APP_NAME))\n"
         + "  instances: ((INSTANCES))\n"
@@ -934,25 +873,8 @@ public class CfRollingRollbackCommandTaskHandlerTest extends CategoryTest {
         .when(pcfCommandTaskHelper)
         .getCfCliPathOnDelegate(true, cfRollingRollbackRequestNG.getCfCliVersion());
 
-    CfRequestConfig cfRequestConfig =
-        CfRequestConfig.builder()
-            .userName(String.valueOf(cfConfig.getUserName()))
-            .endpointUrl(cfConfig.getEndpointUrl())
-            .password(String.valueOf(cfConfig.getPassword()))
-            .orgName(tasInfraConfig.getOrganization())
-            .spaceName(tasInfraConfig.getSpace())
-            .timeOutIntervalInMins(cfRollingRollbackRequestNG.getTimeoutIntervalInMin())
-            .cfHomeDirPath(file.getAbsolutePath())
-            .cfCliPath(pcfCommandTaskHelper.getCfCliPathOnDelegate(true, cfRollingRollbackRequestNG.getCfCliVersion()))
-            .cfCliVersion(cfRollingRollbackRequestNG.getCfCliVersion())
-            .useCFCLI(true)
-            .applicationName(cfRollingRollbackRequestNG.getApplicationName())
-            .desiredCount(cfRollingRollbackRequestNG.getDesiredCount())
-            .build();
-
     String name = "name";
     String id = "id";
-    String url = "url";
     ApplicationSummary applicationSummary = ApplicationSummary.builder()
                                                 .id(id)
                                                 .diskQuota(1)
@@ -962,7 +884,7 @@ public class CfRollingRollbackCommandTaskHandlerTest extends CategoryTest {
                                                 .requestedState(STOPPED)
                                                 .runningInstances(0)
                                                 .build();
-    doReturn(Arrays.asList(applicationSummary)).when(cfDeploymentManager).getPreviousReleasesForRolling(any(), any());
+    doReturn(List.of(applicationSummary)).when(cfDeploymentManager).getPreviousReleasesForRolling(any(), any());
 
     int instances = 1;
     ApplicationDetail applicationDetail = ApplicationDetail.builder()
@@ -990,6 +912,17 @@ public class CfRollingRollbackCommandTaskHandlerTest extends CategoryTest {
         cfRollingRollbackRequestNG, logStreamingTaskClient, commandUnitsProgress);
 
     assertThat(cfCommandExecutionResponse.getCommandExecutionStatus()).isEqualTo(CommandExecutionStatus.SUCCESS);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesBefore().size())
+        .isEqualTo(1);
+    assertThat(
+        cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesBefore().get(0).getInstanceName())
+        .isEqualTo(id);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesAfter().size())
+        .isEqualTo(1);
+    assertThat(
+        cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesAfter().get(0).getInstanceName())
+        .isEqualTo(id);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getDeployedServiceInstances().size()).isZero();
   }
 
   @Test
@@ -1018,11 +951,6 @@ public class CfRollingRollbackCommandTaskHandlerTest extends CategoryTest {
         .mapTasConfigWithDecryption(tasInfraConfig.getTasConnectorDTO(), tasInfraConfig.getEncryptionDataDetails());
 
     TasArtifactConfig tasArtifactConfig = TasPackageArtifactConfig.builder().build();
-    String variableYamls = "\n"
-        + "\n"
-        + "APP_MEMORY: 350M\n"
-        + "INSTANCES: 1\n"
-        + "APP_NAME: rolling_rollback_locallyyyyw_rediessre";
     String manifestsYaml = "applications:\n"
         + "- name: ((APP_NAME))\n"
         + "  instances: ((INSTANCES))\n"
@@ -1064,25 +992,8 @@ public class CfRollingRollbackCommandTaskHandlerTest extends CategoryTest {
         .when(pcfCommandTaskHelper)
         .getCfCliPathOnDelegate(true, cfRollingRollbackRequestNG.getCfCliVersion());
 
-    CfRequestConfig cfRequestConfig =
-        CfRequestConfig.builder()
-            .userName(String.valueOf(cfConfig.getUserName()))
-            .endpointUrl(cfConfig.getEndpointUrl())
-            .password(String.valueOf(cfConfig.getPassword()))
-            .orgName(tasInfraConfig.getOrganization())
-            .spaceName(tasInfraConfig.getSpace())
-            .timeOutIntervalInMins(cfRollingRollbackRequestNG.getTimeoutIntervalInMin())
-            .cfHomeDirPath(file.getAbsolutePath())
-            .cfCliPath(pcfCommandTaskHelper.getCfCliPathOnDelegate(true, cfRollingRollbackRequestNG.getCfCliVersion()))
-            .cfCliVersion(cfRollingRollbackRequestNG.getCfCliVersion())
-            .useCFCLI(true)
-            .applicationName(cfRollingRollbackRequestNG.getApplicationName())
-            .desiredCount(cfRollingRollbackRequestNG.getDesiredCount())
-            .build();
-
     String name = "name";
     String id = "id";
-    String url = "url";
     ApplicationSummary applicationSummary = ApplicationSummary.builder()
                                                 .id(id)
                                                 .diskQuota(1)
@@ -1092,7 +1003,7 @@ public class CfRollingRollbackCommandTaskHandlerTest extends CategoryTest {
                                                 .requestedState(STOPPED)
                                                 .runningInstances(0)
                                                 .build();
-    doReturn(Arrays.asList(applicationSummary)).when(cfDeploymentManager).getPreviousReleasesForRolling(any(), any());
+    doReturn(List.of(applicationSummary)).when(cfDeploymentManager).getPreviousReleasesForRolling(any(), any());
 
     int instances = 1;
     ApplicationDetail applicationDetail = ApplicationDetail.builder()
@@ -1120,5 +1031,152 @@ public class CfRollingRollbackCommandTaskHandlerTest extends CategoryTest {
         cfRollingRollbackRequestNG, logStreamingTaskClient, commandUnitsProgress);
 
     assertThat(cfCommandExecutionResponse.getCommandExecutionStatus()).isEqualTo(CommandExecutionStatus.SUCCESS);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesBefore().size())
+        .isEqualTo(1);
+    assertThat(
+        cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesBefore().get(0).getInstanceName())
+        .isEqualTo(id);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesAfter().size())
+        .isEqualTo(1);
+    assertThat(
+        cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesAfter().get(0).getInstanceName())
+        .isEqualTo(id);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getDeployedServiceInstances().size()).isZero();
+  }
+
+  @Test
+  @Owner(developers = ANIL)
+  @Category(UnitTests.class)
+  public void testRollingRollbackForFirstTime() throws Exception {
+    TasInfraConfig tasInfraConfig = TasInfraConfig.builder().build();
+    char[] password = {'a'};
+    char[] username = {'b'};
+    CloudFoundryConfig cfConfig = CloudFoundryConfig.builder().userName(username).password(password).build();
+    CommandUnitsProgress commandUnitsProgress = CommandUnitsProgress.builder().build();
+
+    File file = new File("/gs");
+    doReturn(file).when(pcfCommandTaskBaseHelper).generateWorkingDirectoryForDeployment();
+
+    doReturn(executionLogCallback)
+        .when(tasTaskHelperBase)
+        .getLogCallback(logStreamingTaskClient, CfCommandUnitConstants.Rollback, true, commandUnitsProgress);
+
+    doReturn(executionLogCallback)
+        .when(tasTaskHelperBase)
+        .getLogCallback(logStreamingTaskClient, CfCommandUnitConstants.Wrapup, true, commandUnitsProgress);
+
+    doReturn(cfConfig)
+        .when(tasNgConfigMapper)
+        .mapTasConfigWithDecryption(tasInfraConfig.getTasConnectorDTO(), tasInfraConfig.getEncryptionDataDetails());
+
+    TasArtifactConfig tasArtifactConfig = TasPackageArtifactConfig.builder().build();
+    String variableYamls = "\n"
+        + "\n"
+        + "APP_MEMORY: 350M\n"
+        + "INSTANCES: 1\n"
+        + "APP_NAME: rolling_rollback_locallyyyyw_rediessre";
+    String manifestsYaml = "applications:\n"
+        + "- name: ((APP_NAME))\n"
+        + "  instances: ((INSTANCES))\n"
+        + "  memory: ((APP_MEMORY))\n"
+        + "  routes:\n"
+        + "    - route: rishabh_basic_app_addt.apps.pcf-harness.com\n"
+        + "  services:\n"
+        + "    - myautoscaler";
+    String autoscalarYaml = "---\n"
+        + "instance_limits:\n"
+        + "  min: 1\n"
+        + "  max: 2\n"
+        + "rules: []\n"
+        + "scheduled_limit_changes:\n"
+        + "- recurrence: 10\n"
+        + "  executes_at: \"2032-01-01T00:00:00Z\"\n"
+        + "  instance_limits:\n"
+        + "    min: 1\n"
+        + "    max: 2";
+    TasManifestsPackage tasManifestsPackage = TasManifestsPackage.builder()
+                                                  .manifestYml(manifestsYaml)
+                                                  .autoscalarManifestYml(autoscalarYaml)
+                                                  .variableYmls(List.of(variableYamls))
+                                                  .build();
+
+    CfRollingRollbackRequestNG cfRollingRollbackRequestNG = CfRollingRollbackRequestNG.builder()
+                                                                .tasInfraConfig(tasInfraConfig)
+                                                                .tasArtifactConfig(tasArtifactConfig)
+                                                                .tasManifestsPackage(tasManifestsPackage)
+                                                                .isFirstDeployment(true)
+                                                                .timeoutIntervalInMin(5)
+                                                                .routeMaps(emptyList())
+                                                                .build();
+
+    doReturn(file).when(pcfCommandTaskBaseHelper).createManifestYamlFileLocally(any());
+
+    doReturn("cfCliPath")
+        .when(pcfCommandTaskHelper)
+        .getCfCliPathOnDelegate(true, cfRollingRollbackRequestNG.getCfCliVersion());
+
+    String name = "name";
+    String id = "id";
+    ApplicationSummary applicationSummary = ApplicationSummary.builder()
+                                                .id(id)
+                                                .diskQuota(1)
+                                                .instances(0)
+                                                .memoryLimit(1)
+                                                .name(name)
+                                                .requestedState(STOPPED)
+                                                .runningInstances(0)
+                                                .build();
+    doReturn(List.of(applicationSummary)).when(cfDeploymentManager).getPreviousReleasesForRolling(any(), any());
+
+    int instances = 1;
+    ApplicationDetail applicationDetail = ApplicationDetail.builder()
+                                              .id(id)
+                                              .diskQuota(1)
+                                              .instances(instances)
+                                              .memoryLimit(1)
+                                              .name(name)
+                                              .requestedState(STOPPED)
+                                              .stack("")
+                                              .runningInstances(instances)
+                                              .build();
+    doReturn(applicationDetail).when(pcfCommandTaskHelper).getApplicationDetails(any(), any());
+
+    doReturn(true).when(cfDeploymentManager).checkIfAppHasAutoscalarEnabled(any(), any());
+
+    File fileArtifact = new File("/gs");
+    TasArtifactDownloadResponse tasArtifactDownloadResponse =
+        TasArtifactDownloadResponse.builder().artifactFile(fileArtifact).build();
+    doReturn(tasArtifactDownloadResponse).when(pcfCommandTaskHelper).downloadPackageArtifact(any(), any());
+
+    doReturn(applicationDetail).when(cfDeploymentManager).createRollingApplicationWithSteadyStateCheck(any(), any());
+
+    LogCallback logCallback = mock(LogCallback.class);
+    doReturn(logCallback)
+        .when(tasTaskHelperBase)
+        .getLogCallback(eq(logStreamingTaskClient), eq(Rollback), eq(true), eq(commandUnitsProgress));
+
+    CfCommandResponseNG cfCommandExecutionResponse = cfRollingRollbackCommandTaskHandlerNG.executeTaskInternal(
+        cfRollingRollbackRequestNG, logStreamingTaskClient, commandUnitsProgress);
+
+    assertThat(cfCommandExecutionResponse.getCommandExecutionStatus()).isEqualTo(CommandExecutionStatus.SUCCESS);
+
+    ArgumentCaptor<String> logCallbackCaptor = ArgumentCaptor.forClass(String.class);
+    verify(logCallback, times(2)).saveExecutionLog(logCallbackCaptor.capture(), any(), any());
+    List<String> allValues = logCallbackCaptor.getAllValues();
+    assertThat(allValues.size()).isEqualTo(2);
+    assertThat(allValues.get(0)).contains("This is first rolling deployment hence skipping rollback");
+    assertThat(allValues.get(1)).contains("PCF Rolling Rollback completed successfully");
+    verify(cfDeploymentManager, times(0)).createRollingApplicationWithSteadyStateCheck(any(), any());
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesBefore().size())
+        .isEqualTo(1);
+    assertThat(
+        cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesBefore().get(0).getInstanceName())
+        .isEqualTo(id);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesAfter().size())
+        .isEqualTo(1);
+    assertThat(
+        cfCommandExecutionResponse.getStepExecutionInstanceInfo().getServiceInstancesAfter().get(0).getInstanceName())
+        .isEqualTo(id);
+    assertThat(cfCommandExecutionResponse.getStepExecutionInstanceInfo().getDeployedServiceInstances().size()).isZero();
   }
 }
