@@ -10,6 +10,7 @@ package io.harness.pms.pipeline.service;
 import static io.harness.annotations.dev.HarnessTeam.PIPELINE;
 import static io.harness.rule.OwnerRule.ADITHYA;
 import static io.harness.rule.OwnerRule.NAMAN;
+import static io.harness.rule.OwnerRule.PRASHANTSHARMA;
 import static io.harness.rule.OwnerRule.RAGHAV_GUPTA;
 import static io.harness.rule.OwnerRule.SAMARTH;
 import static io.harness.rule.OwnerRule.UTKARSH_CHOUBEY;
@@ -47,7 +48,8 @@ import io.harness.pms.pipeline.governance.service.PipelineGovernanceService;
 import io.harness.pms.pipeline.references.PipelineSetupUsageCreationHelper;
 import io.harness.pms.pipeline.validation.PipelineValidationResponse;
 import io.harness.pms.pipeline.validation.service.PipelineValidationService;
-import io.harness.pms.yaml.PipelineVersion;
+import io.harness.pms.plan.execution.beans.PipelineExecutionSummaryEntity.PlanExecutionSummaryKeys;
+import io.harness.pms.yaml.HarnessYamlVersion;
 import io.harness.repositories.pipeline.PMSPipelineRepository;
 import io.harness.rule.Owner;
 import io.harness.utils.PmsFeatureFlagService;
@@ -55,6 +57,7 @@ import io.harness.yaml.validator.InvalidYamlException;
 
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -80,6 +83,7 @@ public class PMSPipelineServiceHelperTest extends PipelineServiceTestBase {
   @Mock PipelineGovernanceService pipelineGovernanceService;
   @Mock PmsFeatureFlagService pmsFeatureFlagService;
   @Mock PipelineSetupUsageCreationHelper pipelineSetupUsageCreationHelper;
+  @Mock PMSPipelineService pmsPipelineService;
   @Spy @InjectMocks PMSPipelineServiceHelper pmsPipelineServiceHelper;
 
   String accountIdentifier = "account";
@@ -132,7 +136,7 @@ public class PMSPipelineServiceHelperTest extends PipelineServiceTestBase {
             .build();
     doReturn(response).when(filterCreatorMergeService).getPipelineInfo(any());
     PipelineEntity entity = PipelineEntity.builder().build();
-    PipelineEntity updatedEntity = pmsPipelineServiceHelper.updatePipelineInfo(entity, PipelineVersion.V0);
+    PipelineEntity updatedEntity = pmsPipelineServiceHelper.updatePipelineInfo(entity, HarnessYamlVersion.V0);
     assertThat(updatedEntity.getStageCount()).isEqualTo(1);
     assertThat(updatedEntity.getStageNames().size()).isEqualTo(1);
     assertThat(updatedEntity.getStageNames().contains("stage-1")).isTrue();
@@ -145,7 +149,7 @@ public class PMSPipelineServiceHelperTest extends PipelineServiceTestBase {
                    .stageNames(Collections.singletonList("stage-1"))
                    .build();
     doReturn(response).when(filterCreatorMergeService).getPipelineInfo(any());
-    updatedEntity = pmsPipelineServiceHelper.updatePipelineInfo(updatedEntity, PipelineVersion.V0);
+    updatedEntity = pmsPipelineServiceHelper.updatePipelineInfo(updatedEntity, HarnessYamlVersion.V0);
     assertThat(updatedEntity.getStageCount()).isEqualTo(1);
     assertThat(updatedEntity.getStageNames().size()).isEqualTo(1);
     assertThat(updatedEntity.getStageNames().contains("stage-1")).isTrue();
@@ -163,7 +167,7 @@ public class PMSPipelineServiceHelperTest extends PipelineServiceTestBase {
                                                      .build();
     doReturn(response).when(filterCreatorMergeService).getPipelineInfo(any());
     PipelineEntity entity = PipelineEntity.builder().build();
-    PipelineEntity updatedEntity = pmsPipelineServiceHelper.updatePipelineInfo(entity, PipelineVersion.V0);
+    PipelineEntity updatedEntity = pmsPipelineServiceHelper.updatePipelineInfo(entity, HarnessYamlVersion.V0);
     assertThat(updatedEntity.getStageCount()).isEqualTo(1);
     assertThat(updatedEntity.getStageNames().size()).isEqualTo(1);
     assertThat(updatedEntity.getStageNames().contains("stage-1")).isTrue();
@@ -183,7 +187,7 @@ public class PMSPipelineServiceHelperTest extends PipelineServiceTestBase {
                                                      .build();
     doReturn(response).when(filterCreatorMergeService).getPipelineInfo(any());
     PipelineEntity entity = PipelineEntity.builder().build();
-    PipelineEntity updatedEntity = pmsPipelineServiceHelper.updatePipelineInfo(entity, PipelineVersion.V0);
+    PipelineEntity updatedEntity = pmsPipelineServiceHelper.updatePipelineInfo(entity, HarnessYamlVersion.V0);
     assertThat(updatedEntity.getStageCount()).isEqualTo(1);
     assertThat(updatedEntity.getStageNames().size()).isEqualTo(1);
     assertThat(updatedEntity.getStageNames().contains("stage-1")).isTrue();
@@ -195,28 +199,29 @@ public class PMSPipelineServiceHelperTest extends PipelineServiceTestBase {
   @Category(UnitTests.class)
   public void testPopulateFilterUsingIdentifier() {
     String filterIdentifier = "filterIdentifier";
-    FilterDTO filterDTO =
-        FilterDTO.builder()
-            .filterProperties(PipelineFilterPropertiesDto.builder()
-                                  .name(pipelineIdentifier)
-                                  .description("some description")
-                                  .pipelineTags(Collections.singletonList(NGTag.builder().key("c").value("h").build()))
-                                  .pipelineIdentifiers(Collections.singletonList(pipelineIdentifier))
-                                  .build())
-            .build();
+    FilterDTO filterDTO = FilterDTO.builder()
+                              .filterProperties(PipelineFilterPropertiesDto.builder()
+                                                    .name(pipelineIdentifier)
+                                                    .description("some description")
+                                                    .pipelineTags(List.of(NGTag.builder().key("c").value("h").build(),
+                                                        NGTag.builder().key("c").value(null).build()))
+                                                    .pipelineIdentifiers(Collections.singletonList(pipelineIdentifier))
+                                                    .build())
+                              .build();
     doReturn(null)
         .when(filterService)
         .get(accountIdentifier, orgIdentifier, projectIdentifier, filterIdentifier, FilterType.PIPELINESETUP);
     assertThatThrownBy(()
-                           -> pmsPipelineServiceHelper.populateFilterUsingIdentifier(
-                               new Criteria(), accountIdentifier, orgIdentifier, projectIdentifier, filterIdentifier))
+                           -> pmsPipelineServiceHelper.populateFilterUsingIdentifier(new ArrayList<>(), new Criteria(),
+                               accountIdentifier, orgIdentifier, projectIdentifier, filterIdentifier))
         .isInstanceOf(InvalidRequestException.class);
     doReturn(filterDTO)
         .when(filterService)
         .get(accountIdentifier, orgIdentifier, projectIdentifier, filterIdentifier, FilterType.PIPELINESETUP);
     Criteria criteria = new Criteria();
+    List<Criteria> criteriaList = new ArrayList<>();
     pmsPipelineServiceHelper.populateFilterUsingIdentifier(
-        criteria, accountIdentifier, orgIdentifier, projectIdentifier, filterIdentifier);
+        criteriaList, criteria, accountIdentifier, orgIdentifier, projectIdentifier, filterIdentifier);
     Document criteriaObject = criteria.getCriteriaObject();
     assertThat(criteriaObject.get(PipelineEntityKeys.name)).isEqualTo(pipelineIdentifier);
     assertThat(((List<?>) ((Map<?, ?>) criteriaObject.get(PipelineEntityKeys.identifier)).get("$in")).size())
@@ -224,16 +229,32 @@ public class PMSPipelineServiceHelperTest extends PipelineServiceTestBase {
     assertThat(((List<?>) ((Map<?, ?>) criteriaObject.get(PipelineEntityKeys.identifier)).get("$in"))
                    .contains(pipelineIdentifier))
         .isTrue();
-    assertThat(((List<?>) ((Map<?, ?>) criteriaObject.get(PipelineEntityKeys.tags)).get("$in")).size()).isEqualTo(1);
-    assertThat(((List<?>) ((Map<?, ?>) criteriaObject.get(PipelineEntityKeys.tags)).get("$in"))
-                   .contains(NGTag.builder().key("c").value("h").build()))
-        .isTrue();
+    assertEquals(criteriaList.size(), 1);
+    assertEquals(criteriaList.get(0).getCriteriaObject().toString(),
+        "Document{{$or=[Document{{tags.key=Document{{$in=[c]}}}}, Document{{tags.value=Document{{$in=[c]}}}}, Document{{tags=Document{{$in=[NGTag(key=c, value=h)]}}}}]}}");
+    filterDTO = FilterDTO.builder()
+                    .filterProperties(PipelineFilterPropertiesDto.builder()
+                                          .name(pipelineIdentifier)
+                                          .description("some description")
+                                          .pipelineTags(List.of(NGTag.builder().key(null).value("c").build()))
+                                          .pipelineIdentifiers(Collections.singletonList(pipelineIdentifier))
+                                          .build())
+                    .build();
+    doReturn(filterDTO)
+        .when(filterService)
+        .get(accountIdentifier, orgIdentifier, projectIdentifier, filterIdentifier, FilterType.PIPELINESETUP);
+    assertThatThrownBy(()
+                           -> pmsPipelineServiceHelper.populateFilterUsingIdentifier(new ArrayList<>(), criteria,
+                               accountIdentifier, orgIdentifier, projectIdentifier, filterIdentifier))
+        .isInstanceOf(InvalidRequestException.class)
+        .hasMessage("Key in Pipeline Tags filter cannot be null");
   }
 
   @Test
   @Owner(developers = NAMAN)
   @Category(UnitTests.class)
   public void testPopulateFilter() {
+    List<Criteria> criteriaList = new ArrayList<>();
     Criteria criteria = new Criteria();
     PipelineFilterPropertiesDto pipelineFilter =
         PipelineFilterPropertiesDto.builder()
@@ -242,7 +263,7 @@ public class PMSPipelineServiceHelperTest extends PipelineServiceTestBase {
             .pipelineTags(Collections.singletonList(NGTag.builder().key("c").value("h").build()))
             .pipelineIdentifiers(Collections.singletonList(pipelineIdentifier))
             .build();
-    PMSPipelineServiceHelper.populateFilter(criteria, pipelineFilter);
+    PMSPipelineServiceHelper.populateFilter(criteriaList, criteria, pipelineFilter);
     Document criteriaObject = criteria.getCriteriaObject();
     assertThat(criteriaObject.get(PipelineEntityKeys.name)).isEqualTo(pipelineIdentifier);
     assertThat(((List<?>) ((Map<?, ?>) criteriaObject.get(PipelineEntityKeys.identifier)).get("$in")).size())
@@ -250,10 +271,9 @@ public class PMSPipelineServiceHelperTest extends PipelineServiceTestBase {
     assertThat(((List<?>) ((Map<?, ?>) criteriaObject.get(PipelineEntityKeys.identifier)).get("$in"))
                    .contains(pipelineIdentifier))
         .isTrue();
-    assertThat(((List<?>) ((Map<?, ?>) criteriaObject.get(PipelineEntityKeys.tags)).get("$in")).size()).isEqualTo(1);
-    assertThat(((List<?>) ((Map<?, ?>) criteriaObject.get(PipelineEntityKeys.tags)).get("$in"))
-                   .contains(NGTag.builder().key("c").value("h").build()))
-        .isTrue();
+    assertEquals(criteriaList.size(), 1);
+    assertEquals(
+        criteriaList.get(0).getCriteriaObject().toString(), "Document{{tags=Document{{$in=[NGTag(key=c, value=h)]}}}}");
   }
 
   @Test
@@ -295,7 +315,7 @@ public class PMSPipelineServiceHelperTest extends PipelineServiceTestBase {
                                         .orgIdentifier(orgIdentifier)
                                         .projectIdentifier(projectIdentifier)
                                         .yaml(yaml)
-                                        .harnessVersion(PipelineVersion.V1)
+                                        .harnessVersion(HarnessYamlVersion.V1)
                                         .build();
     GovernanceMetadata governanceMetadata =
         pmsPipelineServiceHelper.resolveTemplatesAndValidatePipelineYaml(pipelineEntity, true, false);
@@ -447,5 +467,30 @@ public class PMSPipelineServiceHelperTest extends PipelineServiceTestBase {
     GitEntityInfo gitEntityInfo1 = GitContextHelper.getGitEntityInfo();
 
     assertEquals(gitEntityInfo1.getBranch(), gitEntityInfo.getBranch());
+  }
+
+  @Test
+  @Owner(developers = PRASHANTSHARMA)
+  @Category(UnitTests.class)
+  public void testSetPermittedPipeline() {
+    Criteria criteria = new Criteria();
+    List<String> pipelinelist = Arrays.asList(pipelineIdentifier);
+    doReturn(false)
+        .when(pmsPipelineService)
+        .validateViewPermission(accountIdentifier, orgIdentifier, projectIdentifier);
+    doReturn(pipelinelist).when(pmsPipelineService).listAllIdentifiers(any());
+    doReturn(pipelinelist)
+        .when(pmsPipelineService)
+        .getPermittedPipelineIdentifier(accountIdentifier, orgIdentifier, projectIdentifier, pipelinelist);
+    pmsPipelineServiceHelper.setPermittedPipelines(
+        accountIdentifier, orgIdentifier, projectIdentifier, criteria, PlanExecutionSummaryKeys.pipelineIdentifier);
+
+    assertThat(criteria.getCriteriaObject().get(PlanExecutionSummaryKeys.pipelineIdentifier).toString())
+        .isEqualTo("Document{{$in=[pipeline]}}");
+
+    pmsPipelineServiceHelper.setPermittedPipelines(
+        accountIdentifier, orgIdentifier, projectIdentifier, criteria, PipelineEntityKeys.identifier);
+    assertThat(criteria.getCriteriaObject().get(PipelineEntityKeys.identifier).toString())
+        .isEqualTo("Document{{$in=[pipeline]}}");
   }
 }
